ghc-6.2/hslibs/win32/Win32Misc_stub_ffi.h

#include <windows.h>
#include "errors.h"
#include "win32debug.h"
#include "finalizers.h"
#include "gettime.h"
#include <math.h>
#include "HsFFI.h"
extern void* prim_loadAccelerators(HINSTANCE arg1,LPCSTR arg2);
extern HACCEL access_prim_loadAccelerators_res1(HsPtr);
extern int access_prim_loadAccelerators_gc_failed(HsPtr);
extern void* access_prim_loadAccelerators_gc_failstring(HsPtr);
extern void* prim_loadCursor(HINSTANCE arg1,LPSTR arg2);
extern HCURSOR access_prim_loadCursor_res1(HsPtr);
extern int access_prim_loadCursor_gc_failed(HsPtr);
extern void* access_prim_loadCursor_gc_failstring(HsPtr);
extern void* prim_loadIcon(HINSTANCE arg1,LPSTR arg2);
extern HICON access_prim_loadIcon_res1(HsPtr);
extern int access_prim_loadIcon_gc_failed(HsPtr);
extern void* access_prim_loadIcon_gc_failstring(HsPtr);
extern LPSTR prim_iDC_ARROW();
extern LPSTR prim_iDC_IBEAM();
extern LPSTR prim_iDC_WAIT();
extern LPSTR prim_iDC_CROSS();
extern LPSTR prim_iDC_UPARROW();
extern LPSTR prim_iDC_SIZENWSE();
extern LPSTR prim_iDC_SIZENESW();
extern LPSTR prim_iDC_SIZEWE();
extern LPSTR prim_iDC_SIZENS();
extern LPSTR prim_iDI_APPLICATION();
extern LPSTR prim_iDI_HAND();
extern LPSTR prim_iDI_QUESTION();
extern LPSTR prim_iDI_EXCLAMATION();
extern LPSTR prim_iDI_ASTERISK();
extern UINT prim_mB_OK();
extern UINT prim_mB_OKCANCEL();
extern UINT prim_mB_ABORTRETRYIGNORE();
extern UINT prim_mB_YESNOCANCEL();
extern UINT prim_mB_YESNO();
extern UINT prim_mB_RETRYCANCEL();
extern UINT prim_mB_ICONHAND();
extern UINT prim_mB_ICONQUESTION();
extern UINT prim_mB_ICONEXCLAMATION();
extern UINT prim_mB_ICONASTERISK();
extern UINT prim_mB_ICONINFORMATION();
extern UINT prim_mB_ICONSTOP();
extern UINT prim_mB_DEFBUTTON1();
extern UINT prim_mB_DEFBUTTON2();
extern UINT prim_mB_DEFBUTTON3();
extern UINT prim_mB_APPLMODAL();
extern UINT prim_mB_SYSTEMMODAL();
extern UINT prim_mB_TASKMODAL();
extern UINT prim_mB_SETFOREGROUND();
extern UINT prim_iDABORT();
extern UINT prim_iDCANCEL();
extern UINT prim_iDIGNORE();
extern UINT prim_iDNO();
extern UINT prim_iDOK();
extern UINT prim_iDRETRY();
extern UINT prim_iDYES();
extern void* prim_messageBox(HWND arg1,char * arg2,char * arg3,UINT arg4);
extern UINT access_prim_messageBox_res1(HsPtr);
extern int access_prim_messageBox_gc_failed(HsPtr);
extern void* access_prim_messageBox_gc_failstring(HsPtr);
extern DWORD prim_sTD_INPUT_HANDLE();
extern DWORD prim_sTD_OUTPUT_HANDLE();
extern DWORD prim_sTD_ERROR_HANDLE();
extern void* prim_getStdHandle(DWORD arg1);
extern HANDLE access_prim_getStdHandle_res1(HsPtr);
extern int access_prim_getStdHandle_gc_failed(HsPtr);
extern void* access_prim_getStdHandle_gc_failstring(HsPtr);
extern void* prim_transformedEllipse(HDC hdc,LONG gc_arg2,LONG gc_arg3,LONG gc_arg6,LONG gc_arg7,LONG gc_arg10,LONG gc_arg11);
extern int access_prim_transformedEllipse_gc_failed(HsPtr);
extern void* access_prim_transformedEllipse_gc_failstring(HsPtr);
extern UINT prim_eWX_FORCE();
extern UINT prim_eWX_LOGOFF();
extern UINT prim_eWX_POWEROFF();
extern UINT prim_eWX_REBOOT();
extern UINT prim_eWX_SHUTDOWN();
extern void prim_messageBeep(UINT arg1);
extern void* prim_beep(WORD arg1,int arg2);
extern int access_prim_beep_gc_failed(HsPtr);
extern void* access_prim_beep_gc_failstring(HsPtr);
extern void* prim_setWinTimer(HWND arg1,UINT arg2,UINT arg3);
extern UINT access_prim_setWinTimer_res1(HsPtr);
extern int access_prim_setWinTimer_gc_failed(HsPtr);
extern void* access_prim_setWinTimer_gc_failstring(HsPtr);
extern void* prim_killTimer(HWND arg1,UINT arg2);
extern int access_prim_killTimer_gc_failed(HsPtr);
extern void* access_prim_killTimer_gc_failstring(HsPtr);
extern DWORD prim_timeGetTime();